--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,16 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_novo"
+        android:icon="@drawable/ic_videogame_asset_black_24dp"
+        android:orderInCategory="101"
+        android:title="@string/action_novo"
+        app:showAsAction="ifRoom|withText" />
+    <item
+        android:id="@+id/action_estatisticas"
+        android:icon="@drawable/ic_functions_black_24dp"
+        android:orderInCategory="102"
+        android:title="@string/novo"
+        app:showAsAction="ifRoom|withText" />
 </menu>
